parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BACK
    FALSE
    FORW
    FUNC
    GETB
    GETF
    GETL
    GETR
    LEFT
    NL
    PUSHB
    PUSHF
    PUSHL
    PUSHR
    RET
    RIGHT
    TRUE
    UNDO

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> statement
Rule 3     stmt_list -> stmt_list statement
Rule 4     statement -> error
Rule 5     statement -> expr
Rule 6     statement -> OPENST stmt_list CLOSEST
Rule 7     statement -> create_id
Rule 8     statement -> assign
Rule 9     statement -> create_1darr
Rule 10    statement -> create_2darr
Rule 11    statement -> extend1
Rule 12    statement -> extend2
Rule 13    statement -> WHILE OPENBR expr CLOSEBR DO statement
Rule 14    statement -> IF OPENBR expr CLOSEBR statement
Rule 15    statement -> IF OPENBR expr CLOSEBR statement ELSE statement
Rule 16    expr -> MINUS expr
Rule 17    expr -> NOT expr
Rule 18    expr -> INC id
Rule 19    expr -> DEC id
Rule 20    expr -> expr PLUS expr
Rule 21    expr -> expr MINUS expr
Rule 22    expr -> expr MUL expr
Rule 23    expr -> expr DIV expr
Rule 24    expr -> expr OR expr
Rule 25    expr -> expr GT expr
Rule 26    expr -> expr LT expr
Rule 27    expr -> expr EQ expr
Rule 28    expr -> OPENBR expr CLOSEBR
Rule 29    expr -> id OPENBR expr CLOSEBR
Rule 30    expr -> SZ1 id
Rule 31    expr -> SZ2 id expr
Rule 32    expr -> NUM
Rule 33    expr -> id
Rule 34    create_1darr -> 1DARRBOOL id ASGN OPENIND enum CLOSEIND
Rule 35    create_1darr -> 1DARRINT id ASGN OPENIND enum CLOSEIND
Rule 36    extend1 -> EXTEND1 id expr
Rule 37    extend2 -> EXTEND2 id OPENBR expr CLOSEBR OPENBR expr CLOSEBR
Rule 38    create_2darr -> 2DARRBOOL id ASGN OPENIND enum2 CLOSEIND
Rule 39    create_2darr -> 2DARRINT id ASGN OPENIND enum2 CLOSEIND
Rule 40    enum -> expr
Rule 41    enum -> expr COMMA enum
Rule 42    enum2 -> enum
Rule 43    enum2 -> enum DCOMMA enum2
Rule 44    create_id -> UINT id ASGN expr
Rule 45    create_id -> CUINT id ASGN expr
Rule 46    create_id -> BOOL id ASGN expr
Rule 47    create_id -> CBOOL id ASGN expr
Rule 48    assign -> id ASGN expr
Rule 49    assign -> id OPENBR expr CLOSEBR ASGN expr
Rule 50    assign -> id OPENBR expr COMMA expr CLOSEBR ASGN expr
Rule 51    id -> ID

Terminals, with rules where they appear

1DARRBOOL            : 34
1DARRINT             : 35
2DARRBOOL            : 38
2DARRINT             : 39
ASGN                 : 34 35 38 39 44 45 46 47 48 49 50
BACK                 : 
BOOL                 : 46
CBOOL                : 47
CLOSEBR              : 13 14 15 28 29 37 37 49 50
CLOSEIND             : 34 35 38 39
CLOSEST              : 6
COMMA                : 41 50
CUINT                : 45
DCOMMA               : 43
DEC                  : 19
DIV                  : 23
DO                   : 13
ELSE                 : 15
EQ                   : 27
EXTEND1              : 36
EXTEND2              : 37
FALSE                : 
FORW                 : 
FUNC                 : 
GETB                 : 
GETF                 : 
GETL                 : 
GETR                 : 
GT                   : 25
ID                   : 51
IF                   : 14 15
INC                  : 18
LEFT                 : 
LT                   : 26
MINUS                : 16 21
MUL                  : 22
NL                   : 
NOT                  : 17
NUM                  : 32
OPENBR               : 13 14 15 28 29 37 37 49 50
OPENIND              : 34 35 38 39
OPENST               : 6
OR                   : 24
PLUS                 : 20
PUSHB                : 
PUSHF                : 
PUSHL                : 
PUSHR                : 
RET                  : 
RIGHT                : 
SZ1                  : 30
SZ2                  : 31
TRUE                 : 
UINT                 : 44
UNDO                 : 
WHILE                : 13
error                : 4

Nonterminals, with rules where they appear

assign               : 8
create_1darr         : 9
create_2darr         : 10
create_id            : 7
enum                 : 34 35 41 42 43
enum2                : 38 39 43
expr                 : 5 13 14 15 16 17 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 31 36 37 37 40 41 44 45 46 47 48 49 49 50 50 50
extend1              : 11
extend2              : 12
id                   : 18 19 29 30 31 33 34 35 36 37 38 39 44 45 46 47 48 49 50
program              : 0
statement            : 2 3 13 14 15 15
stmt_list            : 1 3 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . statement
    (3) stmt_list -> . stmt_list statement
    (4) statement -> . error
    (5) statement -> . expr
    (6) statement -> . OPENST stmt_list CLOSEST
    (7) statement -> . create_id
    (8) statement -> . assign
    (9) statement -> . create_1darr
    (10) statement -> . create_2darr
    (11) statement -> . extend1
    (12) statement -> . extend2
    (13) statement -> . WHILE OPENBR expr CLOSEBR DO statement
    (14) statement -> . IF OPENBR expr CLOSEBR statement
    (15) statement -> . IF OPENBR expr CLOSEBR statement ELSE statement
    (16) expr -> . MINUS expr
    (17) expr -> . NOT expr
    (18) expr -> . INC id
    (19) expr -> . DEC id
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr MUL expr
    (23) expr -> . expr DIV expr
    (24) expr -> . expr OR expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . OPENBR expr CLOSEBR
    (29) expr -> . id OPENBR expr CLOSEBR
    (30) expr -> . SZ1 id
    (31) expr -> . SZ2 id expr
    (32) expr -> . NUM
    (33) expr -> . id
    (44) create_id -> . UINT id ASGN expr
    (45) create_id -> . CUINT id ASGN expr
    (46) create_id -> . BOOL id ASGN expr
    (47) create_id -> . CBOOL id ASGN expr
    (48) assign -> . id ASGN expr
    (49) assign -> . id OPENBR expr CLOSEBR ASGN expr
    (50) assign -> . id OPENBR expr COMMA expr CLOSEBR ASGN expr
    (34) create_1darr -> . 1DARRBOOL id ASGN OPENIND enum CLOSEIND
    (35) create_1darr -> . 1DARRINT id ASGN OPENIND enum CLOSEIND
    (38) create_2darr -> . 2DARRBOOL id ASGN OPENIND enum2 CLOSEIND
    (39) create_2darr -> . 2DARRINT id ASGN OPENIND enum2 CLOSEIND
    (36) extend1 -> . EXTEND1 id expr
    (37) extend2 -> . EXTEND2 id OPENBR expr CLOSEBR OPENBR expr CLOSEBR
    (51) id -> . ID

    error           shift and go to state 4
    OPENST          shift and go to state 6
    WHILE           shift and go to state 13
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    INC             shift and go to state 18
    DEC             shift and go to state 20
    OPENBR          shift and go to state 14
    SZ1             shift and go to state 21
    SZ2             shift and go to state 22
    NUM             shift and go to state 23
    UINT            shift and go to state 24
    CUINT           shift and go to state 25
    BOOL            shift and go to state 26
    CBOOL           shift and go to state 27
    1DARRBOOL       shift and go to state 28
    1DARRINT        shift and go to state 29
    2DARRBOOL       shift and go to state 30
    2DARRINT        shift and go to state 31
    EXTEND1         shift and go to state 32
    EXTEND2         shift and go to state 33
    ID              shift and go to state 34

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    statement                      shift and go to state 3
    expr                           shift and go to state 5
    create_id                      shift and go to state 7
    assign                         shift and go to state 8
    create_1darr                   shift and go to state 9
    create_2darr                   shift and go to state 10
    extend1                        shift and go to state 11
    extend2                        shift and go to state 12
    id                             shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (3) stmt_list -> stmt_list . statement
    (4) statement -> . error
    (5) statement -> . expr
    (6) statement -> . OPENST stmt_list CLOSEST
    (7) statement -> . create_id
    (8) statement -> . assign
    (9) statement -> . create_1darr
    (10) statement -> . create_2darr
    (11) statement -> . extend1
    (12) statement -> . extend2
    (13) statement -> . WHILE OPENBR expr CLOSEBR DO statement
    (14) statement -> . IF OPENBR expr CLOSEBR statement
    (15) statement -> . IF OPENBR expr CLOSEBR statement ELSE statement
    (16) expr -> . MINUS expr
    (17) expr -> . NOT expr
    (18) expr -> . INC id
    (19) expr -> . DEC id
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr MUL expr
    (23) expr -> . expr DIV expr
    (24) expr -> . expr OR expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . OPENBR expr CLOSEBR
    (29) expr -> . id OPENBR expr CLOSEBR
    (30) expr -> . SZ1 id
    (31) expr -> . SZ2 id expr
    (32) expr -> . NUM
    (33) expr -> . id
    (44) create_id -> . UINT id ASGN expr
    (45) create_id -> . CUINT id ASGN expr
    (46) create_id -> . BOOL id ASGN expr
    (47) create_id -> . CBOOL id ASGN expr
    (48) assign -> . id ASGN expr
    (49) assign -> . id OPENBR expr CLOSEBR ASGN expr
    (50) assign -> . id OPENBR expr COMMA expr CLOSEBR ASGN expr
    (34) create_1darr -> . 1DARRBOOL id ASGN OPENIND enum CLOSEIND
    (35) create_1darr -> . 1DARRINT id ASGN OPENIND enum CLOSEIND
    (38) create_2darr -> . 2DARRBOOL id ASGN OPENIND enum2 CLOSEIND
    (39) create_2darr -> . 2DARRINT id ASGN OPENIND enum2 CLOSEIND
    (36) extend1 -> . EXTEND1 id expr
    (37) extend2 -> . EXTEND2 id OPENBR expr CLOSEBR OPENBR expr CLOSEBR
    (51) id -> . ID

    $end            reduce using rule 1 (program -> stmt_list .)
    error           shift and go to state 4
    OPENST          shift and go to state 6
    WHILE           shift and go to state 13
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    INC             shift and go to state 18
    DEC             shift and go to state 20
    OPENBR          shift and go to state 14
    SZ1             shift and go to state 21
    SZ2             shift and go to state 22
    NUM             shift and go to state 23
    UINT            shift and go to state 24
    CUINT           shift and go to state 25
    BOOL            shift and go to state 26
    CBOOL           shift and go to state 27
    1DARRBOOL       shift and go to state 28
    1DARRINT        shift and go to state 29
    2DARRBOOL       shift and go to state 30
    2DARRINT        shift and go to state 31
    EXTEND1         shift and go to state 32
    EXTEND2         shift and go to state 33
    ID              shift and go to state 34

    statement                      shift and go to state 35
    expr                           shift and go to state 5
    create_id                      shift and go to state 7
    assign                         shift and go to state 8
    create_1darr                   shift and go to state 9
    create_2darr                   shift and go to state 10
    extend1                        shift and go to state 11
    extend2                        shift and go to state 12
    id                             shift and go to state 19

state 3

    (2) stmt_list -> statement .

    error           reduce using rule 2 (stmt_list -> statement .)
    OPENST          reduce using rule 2 (stmt_list -> statement .)
    WHILE           reduce using rule 2 (stmt_list -> statement .)
    IF              reduce using rule 2 (stmt_list -> statement .)
    MINUS           reduce using rule 2 (stmt_list -> statement .)
    NOT             reduce using rule 2 (stmt_list -> statement .)
    INC             reduce using rule 2 (stmt_list -> statement .)
    DEC             reduce using rule 2 (stmt_list -> statement .)
    OPENBR          reduce using rule 2 (stmt_list -> statement .)
    SZ1             reduce using rule 2 (stmt_list -> statement .)
    SZ2             reduce using rule 2 (stmt_list -> statement .)
    NUM             reduce using rule 2 (stmt_list -> statement .)
    UINT            reduce using rule 2 (stmt_list -> statement .)
    CUINT           reduce using rule 2 (stmt_list -> statement .)
    BOOL            reduce using rule 2 (stmt_list -> statement .)
    CBOOL           reduce using rule 2 (stmt_list -> statement .)
    1DARRBOOL       reduce using rule 2 (stmt_list -> statement .)
    1DARRINT        reduce using rule 2 (stmt_list -> statement .)
    2DARRBOOL       reduce using rule 2 (stmt_list -> statement .)
    2DARRINT        reduce using rule 2 (stmt_list -> statement .)
    EXTEND1         reduce using rule 2 (stmt_list -> statement .)
    EXTEND2         reduce using rule 2 (stmt_list -> statement .)
    ID              reduce using rule 2 (stmt_list -> statement .)
    $end            reduce using rule 2 (stmt_list -> statement .)
    CLOSEST         reduce using rule 2 (stmt_list -> statement .)


state 4

    (4) statement -> error .

    error           reduce using rule 4 (statement -> error .)
    OPENST          reduce using rule 4 (statement -> error .)
    WHILE           reduce using rule 4 (statement -> error .)
    IF              reduce using rule 4 (statement -> error .)
    MINUS           reduce using rule 4 (statement -> error .)
    NOT             reduce using rule 4 (statement -> error .)
    INC             reduce using rule 4 (statement -> error .)
    DEC             reduce using rule 4 (statement -> error .)
    OPENBR          reduce using rule 4 (statement -> error .)
    SZ1             reduce using rule 4 (statement -> error .)
    SZ2             reduce using rule 4 (statement -> error .)
    NUM             reduce using rule 4 (statement -> error .)
    UINT            reduce using rule 4 (statement -> error .)
    CUINT           reduce using rule 4 (statement -> error .)
    BOOL            reduce using rule 4 (statement -> error .)
    CBOOL           reduce using rule 4 (statement -> error .)
    1DARRBOOL       reduce using rule 4 (statement -> error .)
    1DARRINT        reduce using rule 4 (statement -> error .)
    2DARRBOOL       reduce using rule 4 (statement -> error .)
    2DARRINT        reduce using rule 4 (statement -> error .)
    EXTEND1         reduce using rule 4 (statement -> error .)
    EXTEND2         reduce using rule 4 (statement -> error .)
    ID              reduce using rule 4 (statement -> error .)
    $end            reduce using rule 4 (statement -> error .)
    CLOSEST         reduce using rule 4 (statement -> error .)
    ELSE            reduce using rule 4 (statement -> error .)


state 5

    (5) statement -> expr .
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . MUL expr
    (23) expr -> expr . DIV expr
    (24) expr -> expr . OR expr
    (25) expr -> expr . GT expr
    (26) expr -> expr . LT expr
    (27) expr -> expr . EQ expr

  ! shift/reduce conflict for MINUS resolved as shift
    error           reduce using rule 5 (statement -> expr .)
    OPENST          reduce using rule 5 (statement -> expr .)
    WHILE           reduce using rule 5 (statement -> expr .)
    IF              reduce using rule 5 (statement -> expr .)
    NOT             reduce using rule 5 (statement -> expr .)
    INC             reduce using rule 5 (statement -> expr .)
    DEC             reduce using rule 5 (statement -> expr .)
    OPENBR          reduce using rule 5 (statement -> expr .)
    SZ1             reduce using rule 5 (statement -> expr .)
    SZ2             reduce using rule 5 (statement -> expr .)
    NUM             reduce using rule 5 (statement -> expr .)
    UINT            reduce using rule 5 (statement -> expr .)
    CUINT           reduce using rule 5 (statement -> expr .)
    BOOL            reduce using rule 5 (statement -> expr .)
    CBOOL           reduce using rule 5 (statement -> expr .)
    1DARRBOOL       reduce using rule 5 (statement -> expr .)
    1DARRINT        reduce using rule 5 (statement -> expr .)
    2DARRBOOL       reduce using rule 5 (statement -> expr .)
    2DARRINT        reduce using rule 5 (statement -> expr .)
    EXTEND1         reduce using rule 5 (statement -> expr .)
    EXTEND2         reduce using rule 5 (statement -> expr .)
    ID              reduce using rule 5 (statement -> expr .)
    $end            reduce using rule 5 (statement -> expr .)
    CLOSEST         reduce using rule 5 (statement -> expr .)
    ELSE            reduce using rule 5 (statement -> expr .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    MUL             shift and go to state 38
    DIV             shift and go to state 39
    OR              shift and go to state 40
    GT              shift and go to state 41
    LT              shift and go to state 42
    EQ              shift and go to state 43

  ! MINUS           [ reduce using rule 5 (statement -> expr .) ]


state 6

    (6) statement -> OPENST . stmt_list CLOSEST
    (2) stmt_list -> . statement
    (3) stmt_list -> . stmt_list statement
    (4) statement -> . error
    (5) statement -> . expr
    (6) statement -> . OPENST stmt_list CLOSEST
    (7) statement -> . create_id
    (8) statement -> . assign
    (9) statement -> . create_1darr
    (10) statement -> . create_2darr
    (11) statement -> . extend1
    (12) statement -> . extend2
    (13) statement -> . WHILE OPENBR expr CLOSEBR DO statement
    (14) statement -> . IF OPENBR expr CLOSEBR statement
    (15) statement -> . IF OPENBR expr CLOSEBR statement ELSE statement
    (16) expr -> . MINUS expr
    (17) expr -> . NOT expr
    (18) expr -> . INC id
    (19) expr -> . DEC id
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr MUL expr
    (23) expr -> . expr DIV expr
    (24) expr -> . expr OR expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . OPENBR expr CLOSEBR
    (29) expr -> . id OPENBR expr CLOSEBR
    (30) expr -> . SZ1 id
    (31) expr -> . SZ2 id expr
    (32) expr -> . NUM
    (33) expr -> . id
    (44) create_id -> . UINT id ASGN expr
    (45) create_id -> . CUINT id ASGN expr
    (46) create_id -> . BOOL id ASGN expr
    (47) create_id -> . CBOOL id ASGN expr
    (48) assign -> . id ASGN expr
    (49) assign -> . id OPENBR expr CLOSEBR ASGN expr
    (50) assign -> . id OPENBR expr COMMA expr CLOSEBR ASGN expr
    (34) create_1darr -> . 1DARRBOOL id ASGN OPENIND enum CLOSEIND
    (35) create_1darr -> . 1DARRINT id ASGN OPENIND enum CLOSEIND
    (38) create_2darr -> . 2DARRBOOL id ASGN OPENIND enum2 CLOSEIND
    (39) create_2darr -> . 2DARRINT id ASGN OPENIND enum2 CLOSEIND
    (36) extend1 -> . EXTEND1 id expr
    (37) extend2 -> . EXTEND2 id OPENBR expr CLOSEBR OPENBR expr CLOSEBR
    (51) id -> . ID

    error           shift and go to state 4
    OPENST          shift and go to state 6
    WHILE           shift and go to state 13
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    INC             shift and go to state 18
    DEC             shift and go to state 20
    OPENBR          shift and go to state 14
    SZ1             shift and go to state 21
    SZ2             shift and go to state 22
    NUM             shift and go to state 23
    UINT            shift and go to state 24
    CUINT           shift and go to state 25
    BOOL            shift and go to state 26
    CBOOL           shift and go to state 27
    1DARRBOOL       shift and go to state 28
    1DARRINT        shift and go to state 29
    2DARRBOOL       shift and go to state 30
    2DARRINT        shift and go to state 31
    EXTEND1         shift and go to state 32
    EXTEND2         shift and go to state 33
    ID              shift and go to state 34

    stmt_list                      shift and go to state 44
    statement                      shift and go to state 3
    expr                           shift and go to state 5
    create_id                      shift and go to state 7
    assign                         shift and go to state 8
    create_1darr                   shift and go to state 9
    create_2darr                   shift and go to state 10
    extend1                        shift and go to state 11
    extend2                        shift and go to state 12
    id                             shift and go to state 19

state 7

    (7) statement -> create_id .

    error           reduce using rule 7 (statement -> create_id .)
    OPENST          reduce using rule 7 (statement -> create_id .)
    WHILE           reduce using rule 7 (statement -> create_id .)
    IF              reduce using rule 7 (statement -> create_id .)
    MINUS           reduce using rule 7 (statement -> create_id .)
    NOT             reduce using rule 7 (statement -> create_id .)
    INC             reduce using rule 7 (statement -> create_id .)
    DEC             reduce using rule 7 (statement -> create_id .)
    OPENBR          reduce using rule 7 (statement -> create_id .)
    SZ1             reduce using rule 7 (statement -> create_id .)
    SZ2             reduce using rule 7 (statement -> create_id .)
    NUM             reduce using rule 7 (statement -> create_id .)
    UINT            reduce using rule 7 (statement -> create_id .)
    CUINT           reduce using rule 7 (statement -> create_id .)
    BOOL            reduce using rule 7 (statement -> create_id .)
    CBOOL           reduce using rule 7 (statement -> create_id .)
    1DARRBOOL       reduce using rule 7 (statement -> create_id .)
    1DARRINT        reduce using rule 7 (statement -> create_id .)
    2DARRBOOL       reduce using rule 7 (statement -> create_id .)
    2DARRINT        reduce using rule 7 (statement -> create_id .)
    EXTEND1         reduce using rule 7 (statement -> create_id .)
    EXTEND2         reduce using rule 7 (statement -> create_id .)
    ID              reduce using rule 7 (statement -> create_id .)
    $end            reduce using rule 7 (statement -> create_id .)
    CLOSEST         reduce using rule 7 (statement -> create_id .)
    ELSE            reduce using rule 7 (statement -> create_id .)


state 8

    (8) statement -> assign .

    error           reduce using rule 8 (statement -> assign .)
    OPENST          reduce using rule 8 (statement -> assign .)
    WHILE           reduce using rule 8 (statement -> assign .)
    IF              reduce using rule 8 (statement -> assign .)
    MINUS           reduce using rule 8 (statement -> assign .)
    NOT             reduce using rule 8 (statement -> assign .)
    INC             reduce using rule 8 (statement -> assign .)
    DEC             reduce using rule 8 (statement -> assign .)
    OPENBR          reduce using rule 8 (statement -> assign .)
    SZ1             reduce using rule 8 (statement -> assign .)
    SZ2             reduce using rule 8 (statement -> assign .)
    NUM             reduce using rule 8 (statement -> assign .)
    UINT            reduce using rule 8 (statement -> assign .)
    CUINT           reduce using rule 8 (statement -> assign .)
    BOOL            reduce using rule 8 (statement -> assign .)
    CBOOL           reduce using rule 8 (statement -> assign .)
    1DARRBOOL       reduce using rule 8 (statement -> assign .)
    1DARRINT        reduce using rule 8 (statement -> assign .)
    2DARRBOOL       reduce using rule 8 (statement -> assign .)
    2DARRINT        reduce using rule 8 (statement -> assign .)
    EXTEND1         reduce using rule 8 (statement -> assign .)
    EXTEND2         reduce using rule 8 (statement -> assign .)
    ID              reduce using rule 8 (statement -> assign .)
    $end            reduce using rule 8 (statement -> assign .)
    CLOSEST         reduce using rule 8 (statement -> assign .)
    ELSE            reduce using rule 8 (statement -> assign .)


state 9

    (9) statement -> create_1darr .

    error           reduce using rule 9 (statement -> create_1darr .)
    OPENST          reduce using rule 9 (statement -> create_1darr .)
    WHILE           reduce using rule 9 (statement -> create_1darr .)
    IF              reduce using rule 9 (statement -> create_1darr .)
    MINUS           reduce using rule 9 (statement -> create_1darr .)
    NOT             reduce using rule 9 (statement -> create_1darr .)
    INC             reduce using rule 9 (statement -> create_1darr .)
    DEC             reduce using rule 9 (statement -> create_1darr .)
    OPENBR          reduce using rule 9 (statement -> create_1darr .)
    SZ1             reduce using rule 9 (statement -> create_1darr .)
    SZ2             reduce using rule 9 (statement -> create_1darr .)
    NUM             reduce using rule 9 (statement -> create_1darr .)
    UINT            reduce using rule 9 (statement -> create_1darr .)
    CUINT           reduce using rule 9 (statement -> create_1darr .)
    BOOL            reduce using rule 9 (statement -> create_1darr .)
    CBOOL           reduce using rule 9 (statement -> create_1darr .)
    1DARRBOOL       reduce using rule 9 (statement -> create_1darr .)
    1DARRINT        reduce using rule 9 (statement -> create_1darr .)
    2DARRBOOL       reduce using rule 9 (statement -> create_1darr .)
    2DARRINT        reduce using rule 9 (statement -> create_1darr .)
    EXTEND1         reduce using rule 9 (statement -> create_1darr .)
    EXTEND2         reduce using rule 9 (statement -> create_1darr .)
    ID              reduce using rule 9 (statement -> create_1darr .)
    $end            reduce using rule 9 (statement -> create_1darr .)
    CLOSEST         reduce using rule 9 (statement -> create_1darr .)
    ELSE            reduce using rule 9 (statement -> create_1darr .)


state 10

    (10) statement -> create_2darr .

    error           reduce using rule 10 (statement -> create_2darr .)
    OPENST          reduce using rule 10 (statement -> create_2darr .)
    WHILE           reduce using rule 10 (statement -> create_2darr .)
    IF              reduce using rule 10 (statement -> create_2darr .)
    MINUS           reduce using rule 10 (statement -> create_2darr .)
    NOT             reduce using rule 10 (statement -> create_2darr .)
    INC             reduce using rule 10 (statement -> create_2darr .)
    DEC             reduce using rule 10 (statement -> create_2darr .)
    OPENBR          reduce using rule 10 (statement -> create_2darr .)
    SZ1             reduce using rule 10 (statement -> create_2darr .)
    SZ2             reduce using rule 10 (statement -> create_2darr .)
    NUM             reduce using rule 10 (statement -> create_2darr .)
    UINT            reduce using rule 10 (statement -> create_2darr .)
    CUINT           reduce using rule 10 (statement -> create_2darr .)
    BOOL            reduce using rule 10 (statement -> create_2darr .)
    CBOOL           reduce using rule 10 (statement -> create_2darr .)
    1DARRBOOL       reduce using rule 10 (statement -> create_2darr .)
    1DARRINT        reduce using rule 10 (statement -> create_2darr .)
    2DARRBOOL       reduce using rule 10 (statement -> create_2darr .)
    2DARRINT        reduce using rule 10 (statement -> create_2darr .)
    EXTEND1         reduce using rule 10 (statement -> create_2darr .)
    EXTEND2         reduce using rule 10 (statement -> create_2darr .)
    ID              reduce using rule 10 (statement -> create_2darr .)
    $end            reduce using rule 10 (statement -> create_2darr .)
    CLOSEST         reduce using rule 10 (statement -> create_2darr .)
    ELSE            reduce using rule 10 (statement -> create_2darr .)


state 11

    (11) statement -> extend1 .
